<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyBackground"
        android:padding="12dp">


        <LinearLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/my_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlHardcoded">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/lang" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/settings"
                    android:src="@drawable/ic_baseline_settings_24"
                    app:tint="@color/black" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/name_surname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/header_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/avatar"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/name_surname"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/current_city"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>


        </LinearLayout>


        <View
            android:id="@+id/hr_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="18dp"
            android:background="@color/goodGrey"
            app:layout_constraintTop_toBottomOf="@id/name_surname_layout" />


        <LinearLayout
            android:id="@+id/get_saved_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@id/hr_line">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/chosen"
                    android:src="@drawable/izbrannyi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center_vertical"
                    android:text="@string/chosen"
                    android:textColor="@color/black90"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/deadlines"
                    android:src="@drawable/deadlines" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="@font/open_sans_light"
                    android:gravity="center_vertical"
                    android:text="@string/deadlines"
                    android:textColor="@color/black90"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/country_spin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/get_saved_buttons_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/country_of_receipt"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/countries" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/year_spin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/country_spin_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/year_of_admission"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/years" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/speciality_spin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/year_spin_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/speciality"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/specialities" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/points_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/speciality_spin_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/points"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ielts"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7.5"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sat"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="900"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/portfolio_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/points_layout">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/portfolio"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/star1_pf"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/rating"
                    app:tint="@color/orange" />

                <ImageView
                    android:id="@+id/star2_pf"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star3_pf"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/in_process" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/motivation_letter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/portfolio_layout">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/motivation_letter"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/star1_ml"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star"
                    app:tint="@color/orange" />

                <ImageView
                    android:id="@+id/star2_ml"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star3_ml"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/ready" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommendation_letter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/motivation_letter_layout">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/recommendation_letter"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/star1_rl"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:src="@drawable/star"
                    android:contentDescription="@string/rating"
                    app:tint="@color/orange" />

                <ImageView
                    android:id="@+id/star2_rl"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />

                <ImageView
                    android:id="@+id/star3_rl"
                    android:layout_width="22dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="4dp"
                    android:contentDescription="@string/rating"
                    android:src="@drawable/star" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/in_process" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
